<resources>
    <string name="app_name">Demo</string>
    <string name="test">test</string>
    <string name="swip_menu_listview">swip menu listview</string>
    <string name="simple">simple menu</string>
    <string name="different_menu">different menu</string>
    <string name="menu_listview_open">Open</string>
    <string name="on_swipe_start">onSwipeStart</string>
    <string name="on_swipe_end">onSwipeEnd</string>
    <string name="long_click">long click</string>
    <string name="custer_image">custer image</string>
    <string name="auto_scroll_view_paper"> auto scroll view paper</string>

    <string name="origin_image">origin image view </string>
    <string name="circle_image">circle image view </string>
    <string name="circle_gradient_image">circle gradient image view </string>
    <string name="rect_image">rect image view </string>
    <string name="switch_to">switch to  another style</string>
    <string name="pull_to_refresh">pull to refresh</string>

    <string name="pull_to_refresh_ex_1">pull to refresh ex 1</string>
    <string name="pull_to_refresh_ex_2">pull to refresh ex 2</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="text_view_refresh">textview refresh :</string>

</resources>
