<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hxm.demo.MainActivity">

    <Button
        android:id="@+id/button_swip_menu_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swip_menu_listview"
    />

    <Button
        android:id="@+id/button_circle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_swip_menu_listview"
        android:text="@string/custer_image"
        />

    <Button
        android:id="@+id/button_auto_scroll_view_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_circle_view"
        android:text="@string/auto_scroll_view_paper"
        />

    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_auto_scroll_view_paper"
        android:text="@string/test"
        />

</RelativeLayout>
